workspaces/liferay-learn-workspace/client-extensions/liferay-learn-global-css/assets/global.css
/* ... */
.container-fluid-max-lg {
	max-width: var(--container-max-lg);
}

.container-fluid-max-xl {
	max-width: var(--container-max-xl);
}

.landing-page,
.learn-card-container {
	border-bottom: 1px solid var(--color-neutral-2, #e2e2e4);
	display: flex;
	flex-wrap: wrap;
	gap: var(--spacer-3);
	padding: 1.5rem 0;
}

.learn-article {
	font-family: var(--font-family-sans-serif);
	max-width: var(--container-max-xl);
	padding: var(--spacer-4);
	position: relative;

	.general-info {
		background-color: var(--white);

		.actions {
			display: block;

			svg {
				height: 2.375rem;
				width: 2.375rem;
			}
		}

		@media only screen and (min-width: 768px) {
			position: fixed;
			width: calc(100% - 16.66667%);
			z-index: 1;
		}
	}

	.learn-article-breadcrumbs {
		margin-bottom: var(--spacer-3, 1rem);
		a,
		li {
			border-radius: 1px;
			color: var(--color-state-neutral-darken-1, #6c6c75);
			font-size: 0.8125rem;
			text-decoration: none;
			text-underline-offset: 0.23em;
			transition: color 0.15s ease-in-out,
				background-color 0.15s ease-in-out,
				border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
		}

		.learn-article-breadcrumb {
			display: inline-flex;
			flex-wrap: wrap;
			list-style: none;
			margin: 0;
			padding: 0;

			li + li::before {
				content: '/';
				padding: 0 4px;
			}
		}

		.submit-feedback > a {
			color: var(--color-brand-primary, #0b5fff);
			font-size: 1rem;
			font-style: normal;
			font-weight: 600;
			line-height: 1.5rem;

			&:hover {
				color: var(--color-action-primary-active, #004ad7);
			}
		}
	}

	.learn-article-categories-tags {
		margin-top: 2rem;
	}

	.learn-article-category-title {
		color: var(--color-neutral-10, #282934);
		font-size: 0.875rem;
		font-style: normal;
		font-weight: 600;
		line-height: 1rem;
	}

	.learn-article-content {
		max-width: var(--container-max-lg);

		h1 {
			margin-bottom: var(--spacer-3, 1rem);
		}

		h1 > a,
		h2 > a,
		h3 > a,
		h4 > a {
			color: #000;
			font-weight: 700;
			text-decoration: none;
		}

		margin-right: 2rem;

		blockquote {
			border-left: 2px solid var(--color-brand-primary, #0b5fff);
			color: var(--color-neutral-8, #54555f);
			font-size: 1.125rem;
			font-weight: 300;
			line-height: 20px;
			margin: 1.5rem 0;
			padding-left: 1.5rem;
		}

		p {
			color: var(--color-neutral-8, #54555f);
		}

		table {
			border-spacing: 0;
			color: var(--color-neutral-8, #54555f);
			margin-bottom: 1rem;
			width: 100%;

			td {
				background-clip: padding-box;
				border-bottom-width: 0.0625rem;
				border-color: transparent;
				border-left-width: 0;
				border-right-width: 0;
				border-style: solid;
				border-top-width: 0.0625rem;
				height: 56px;
				padding: var(--spacer-2, 0.5rem) var(--spacer-3, 1rem);
				position: relative;
				vertical-align: middle;
			}

			th {
				color: var(--color-neutral-10, #282934);
				font-size: 0.875rem;
				height: 56px;
				padding: var(--spacer-2, 0.5rem) var(--spacer-3, 1rem);
			}

			thead {
				color: var(--color-neutral-0, #fff);
			}
		}

		table,
		.table {
			td:first-child,
			th:first-child,
			.table-column-start {
				padding-left: 1.25rem;
			}

			thead td,
			thead th {
				border-bottom: calc(2 * 0.0625rem) solid #dee2e6;
				border-top-width: 0;
				vertical-align: middle;
			}
		}

		table,
		.table-striped {
			tbody
				tr:nth-of-type(odd):not(.table-active):not(.table-disabled):not(
					.table-divider
				) {
				&,
				td,
				th {
					background-color: var(
						--color-state-info-lighten-2,
						#e6ebf5
					);
				}
			}
		}
	}

	.learn-article-page-nav {
		align-self: flex-start;
		padding-left: var(--spacer-2);
		position: sticky;
		top: 135px;
		width: 256px;

		a {
			border-radius: 0;
			color: var(--color-neutral-6, #82828c);
			display: block;
			font-size: 1rem;
			line-height: 1.5rem;
			margin: var(--spacer-2) 0;
			padding: var(--spacer-2);

			&:hover {
				color: var(--color-neutral-10, #282934) !important;
			}

			&.selected {
				background: none;
				color: var(--color-neutral-10, #282934) !important;
				position: relative;

				&::before {
					background-color: var(--color-brand-primary, #0b5fff);
					bottom: 0;
					content: '';
					left: -4px;
					position: absolute;
					top: 0;
					width: 4px;
				}
			}
		}
	}

	.learn-article-wrapper {
		display: flex;
	}

	.selected {
		background-color: var(--color-action-primary-active-20, #e6edfb);
		color: var(--color-action-primary-active, #004ad7) !important;

		&:hover a {
			background-color: var(
				--color-action-primary-hover-10,
				#edf3fe
			) !important;
			color: var(--color-brand-primary-darken-2, #004ad7) !important;
		}
	}

	.tag-container {
		background: var(--color-neutral-0, #fff);
		border: 1px solid var(--color-brand-primary, #0b5fff);
		border-radius: var(--border-radius-lg);
		gap: 0.25rem;
		padding: 0.25rem 0.75rem;

		&:hover {
			border-color: var(--color-action-primary-active, #004ad7);
			color: var(--color-action-primary-active, #004ad7);
			text-decoration: none;
		}
	}
}
/* ... */

